--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,14 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-node_modules/
-.npm
-.eslintcache
+/node_modules
 
 # next.js
-.next/
-out/
-dist/
+/.next/
+/out/
 
 # production
-build/
+/build
 
 # debug
 npm-debug.log*
@@ -20,11 +17,7 @@ yarn-error.log*
 .pnpm-debug.log*
 
 # env files
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+.env*
 
 # vercel
 .vercel
@@ -32,18 +25,3 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
-
-# OS files
-.DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
-
-# IDE
-.vscode/
-.idea/
-*.swp
-*.swo
-*~
