--- a/package.json
+++ b/package.json
@@ -1,18 +1,15 @@
 {
-  "name": "medhassu",
+  "name": "my-v0-project",
   "version": "0.1.0",
   "private": true,
-  "description": "Markdown-driven ed-tech platform with GitHub integration",
   "scripts": {
     "build": "next build",
-    "deploy": "ts-node scripts/deploy-to-github.ts",
     "dev": "next dev",
     "lint": "eslint .",
     "start": "next start"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
-    "@octokit/rest": "latest",
     "@radix-ui/react-accordion": "1.2.2",
     "@radix-ui/react-alert-dialog": "1.1.4",
     "@radix-ui/react-aspect-ratio": "1.1.1",
@@ -48,12 +45,10 @@
     "cmdk": "1.0.4",
     "date-fns": "4.1.0",
     "embla-carousel-react": "8.5.1",
-    "fs": "latest",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
     "next": "16.0.0",
-    "next-themes": "^0.4.6",
-    "path": "latest",
+    "next-themes": "latest",
     "react": "19.2.0",
     "react-day-picker": "9.8.0",
     "react-dom": "19.2.0",
@@ -73,7 +68,6 @@
     "@types/react-dom": "^19",
     "postcss": "^8.5",
     "tailwindcss": "^4.1.9",
-    "ts-node": "^10.9.2",
     "tw-animate-css": "1.3.3",
     "typescript": "^5"
   }
