--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    // Optional safety net for Vercel & CI:
+    "postinstall": "npm install --legacy-peer-deps || true"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
@@ -66,6 +68,15 @@
     "autoprefixer": "^10.4.20",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.16",
-    "typescript": "^5"
+    "typescript": "^5.6.3"
+  },
+  // 👇 Overrides ensure React 19 compatibility for vaul
+  "overrides": {
+    "vaul/react": "19.2.0",
+    "vaul/react-dom": "19.2.0"
+  },
+  // 👇 Prevent npm peer dependency errors
+  "npmConfig": {
+    "legacy-peer-deps": true
   }
 }
