--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "medhassu-platform",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -52,6 +52,9 @@
     "react-hook-form": "^7.60.0",
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.4",
+    "remark-gfm": "^4.0.0",
+    "react-markdown": "^9.0.3",
+    "react-syntax-highlighter": "^15.5.0",
     "sonner": "^1.7.4",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
